# job-radar

./: .env.example  README.md  pyproject.toml
.github/workflows/: job-radar.yml
src/job_radar/: cli.py  config.py  dedup.py  discord.py  display.py  filters.py  github_api.py  parser.py  state.py
src/job_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_dedup.py  test_filters.py  test_parser.py  test_state.py
tests/fixtures/: sample_diff.txt
