[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
version = "0.1.0"
description = "Monitor GitHub job repos and get Discord alerts for new grad roles"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
job-radar = "job_radar.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
